-
Bug
-
Resolution: Done
-
P1: Critical
-
6.4.0 Beta3
-
None
-
922de0b972 (qt/qtquick3d/dev) 6e6305a1a1 (qt/qtquick3d/6.4) 6e6305a1a1 (qt/tqtc-qtquick3d/6.4) 922de0b972 (qt/tqtc-qtquick3d/dev) 6e6305a1a1 (qt/qtquick3d/6.4.0) 6e6305a1a1 (qt/tqtc-qtquick3d/6.4.0) 6e6305a1a1 (qt/qtquick3d/6.4.1), 06b5d1d33 (dev)
Skeletal animations that looked fine in Qt 6.3 are jittery in Qt 6.4. To reproduce, run the attached example with Qt 6.3 and Qt 6.4 and compare the results. The jitter is especially visible when the elephant reaches the idle phase, where it stands in place, breathing.
Note: Videos created with 6.3 and dev branches, but 6.4 branch behaves the same as dev.
I've attached videos of this phase with both Qt versions to demonstrate the bug.
elephant_qt63.mp4
- How it looked in Qt 6.3, no jitter.
elephant_qtdev.mp4
- How it looks in dev, jittery.
elephant.zip
- Example to reproduce issue.
Note: The asset files in the attached project are generated with balsam from Qt 6.2, but I also tried regenerating them with the one in dev and this did not make any difference.
| For Gerrit Dashboard: QTBUG-105918 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 428722,8 | Quick3DUtils: Fix bug in RenderData's compare function | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |
| 429601,2 | Quick3DUtils: Fix bug in RenderData's compare function | 6.4 | qt/qtquick3d | Status: MERGED | +2 | 0 |
| 485241,3 | Fix auto test for RotationData | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |
| 485720,2 | Fix auto test for RotationData | 6.5 | qt/qtquick3d | Status: MERGED | +2 | 0 |
| 485721,2 | Fix auto test for RotationData | 6.6 | qt/qtquick3d | Status: MERGED | +2 | 0 |
| 485722,2 | Fix auto test for RotationData | 6.5.2 | qt/qtquick3d | Status: MERGED | +2 | 0 |